# Beacon-Object-File-Library

./: .gitignore  .gitmodules  Beacon-Object-File-Library.sln  CMakeLists.txt  IDEAS.md  README.md
.github/workflows/: build.yml
EnumDeviceDrivers/: EnumDeviceDrivers.cna  EnumDeviceDrivers.vcxproj  EnumDeviceDrivers.vcxproj.filters  Makefile  bof.cpp
EnumNamedPipes/: EnumNamedPipes.cna  EnumNamedPipes.vcxproj  Makefile  bof.cpp  packages.config
FileExfiltrationUrlEncoded/: FileExfiltrationUrlEncoded.cna  FileExfiltrationUrlEncoded.vcxproj  Makefile  bof.cpp
GetSystemDirectory/: GetSystemDirectory.cna  GetSystemDirectory.vcxproj  GetSystemDirectory.vcxproj.filters  Makefile  bof.cpp
Ipconfig/: Ipconfig.cna  Ipconfig.vcxproj  Ipconfig.vcxproj.filters  Makefile  bof.cpp
RegistryPersistence/: Makefile  RegistryPersistence.cna  RegistryPersistence.vcxproj  RegistryPersistence.vcxproj.filters  bof.cpp
Template/: Makefile  README.md  Template.vcxproj  bof.cpp
TimeStomp/: Makefile  TimeStomp.cna  TimeStomp.vcxproj  TimeStomp.vcxproj.filters  bof.cpp
Tools/: build_all_bofs.bat  build_coffloader.bat
WhoAmI/: Makefile  WhoAmI.cna  WhoAmI.vcxproj  WhoAmI.vcxproj.filters  bof.cpp
